fix menu on small screen fixes #75

--- a/wine_cellar/assets/css/card.css
+++ b/wine_cellar/assets/css/card.css
@@ -15,7 +15,7 @@
   overflow: hidden;
 
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  
+
   p {
     margin: 0;
   }
@@ -25,7 +25,7 @@
     color: inherit;
   }
 
-  @media screen and (min-width: 50em) {
+  @media screen and (min-width: 48em) {
     width: calc(50% - 20px); /* Half of container width minus the gap */
   }
 }
@@ -47,4 +47,3 @@
   display: flex;
   justify-content: flex-end;
 }
-
